2007-08-28      1.0     Bug fix - now works under 5.9.5.  Removed
                        POD-testing dependency, making those tests
                        only run if the relevant modules are
                        installed
2004-11-06      0.1     First release of Data::Transactional

2004-05-28      Tie::Hash::Transactional 1.1 released.  Only change is
                documentation updates to note that limitation, and
                to also note that it is deprecated
2001-06-13      Original release of Tie::Hash::Transactional.  This
                only supported transactions in the top level of a
                multi-level data structure.