@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Data-Transactional
-version:      1.0
+version:      1.01
 version_from: lib/Data/Transactional.pm
 installdirs:  site
 requires:
