@@ -1,3 +1,5 @@
+2008-06-16      1.01    Remove 'use diagnostics'
+
 2007-08-28      1.0     Bug fix - now works under 5.9.5.  Removed
                         POD-testing dependency, making those tests
                         only run if the relevant modules are
